10.x/.k8s/k8s-sitecore-xm1/ingress-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sitecondocker-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  rules:
  - host: cd.sitecondocker.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
  - host: cd1.sitecondocker.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
  - host: cd2.sitecondocker.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
  - host: cm.sitecondocker.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cm
          servicePort: 80
  - host: id.sitecondocker.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: id
          servicePort: 80
  tls:
  - secretName: global-cd-tls
    hosts:
    - cd.sitecondocker.globalhost
  - secretName: global-cd1-tls
    hosts:
    - cd1.sitecondocker.globalhost
  - secretName: global-cd2-tls
    hosts:
    - cd2.sitecondocker.globalhost
  - secretName: global-cm-tls
    hosts:
    - cm.sitecondocker.globalhost
  - secretName: global-id-tls
    hosts:
    - id.sitecondocker.globalhost
